# proz-projekt

./: .gitignore  CMakeLists.txt  ClockManager.h  LICENSE  Makefile  MessageHandler.cpp  MessageHandler.h  ProcessLogic.cpp  ProcessLogic.h  ResourceManager.cpp  ResourceManager.h  main.cpp  types.h
